client/src/components/Navbar/Navbar.css
#nav-menu   {
    margin-top: 50px;
    padding-right: 20px;
    justify-content: space-around;
}

#initials   {
    margin-left: 20px;
    padding-bottom: 20px;
}

.navdeco  {
    background: black;
    border: 1px solid #ada578;
}

a  {
    color: #ffef96;
}

.navbar-brand   {
    margin-left: 5px;
}

